--- a/src/resources/views/blog/show.hbs
+++ b/src/resources/views/blog/show.hbs
@@ -9,7 +9,7 @@
                 <div>
                     <h5 class="mt-0">{{this.title}}</h5>
                     <p style="max-height: 150px">
-                        {{this.content}}
+                        {{{this.content}}}
                     </p>
                     <a text-decoration: none; href="/blog/{{this.slug}}" class="stretched-link">Chi tiết</a>
                 </div>
