--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -26,6 +26,11 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     {{!-- sử dụng scss trong bài --}}
     <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/css/style.css" />
+    <link rel="stylesheet" href="/css/css/swiper-bundle.min.css" />
+
+
+
 
     <link rel="stylesheet" href="/vendor/eggy-js/css/eggy.css" />
     <link rel="stylesheet" href="/vendor/eggy-js/css/progressbar.css" />
