--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
-      <img src="/img/logo.jpg" alt="logo" style="height: 30px;width: 30px; margin-right: 20px;margin-left: 20px">
+      <img src="https://hdgmvietnam.com/admin/upload/image/giao-hoi-cong-giao-dan-than-trong-su-mang-giao-duc.jpg" alt="logo" style="height: 30px;width: 30px; margin-right: 20px;margin-left: 20px">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,196 +10,152 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
+          <a class="nav-link active" aria-current="page" href="/">Trang chủ</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/blog">Blog</a>
-        </li>
-        <li class="nav-item dropdown">
+        {{!-- <li class="nav-item">
+          <a class="nav-link" href="#">Blog</a>
+        </li> --}}
+        <li class="nav-item dropdown" style="font-weight: 600;">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Tạo phòng
-                {{!-- thêm hình gì đó hợp lý --}}
-                <span>
-                  <img src="/img/logo.jpg" alt=""
-                    style="height: 30px;width: 30px; margin-right: 20px;margin-left: 20px">
-                </span>
-              </a></li>
-            <li><a class="dropdown-item" href="#"
-                style="height: 30px;width: 30px; margin-right: 20px;margin-left: 20px">Blog</a></li>
+            Chức năng
+          </a>  
+          <ul class="dropdown-menu" style="font-weight: 600;">
             <li>
-              <hr class="dropdown-divider">
+              <a class="dropdown-item" href="/competition" >
+               <ion-icon name="star-sharp" style="color: rgb(73, 73, 1); margin-right:10px; " ></ion-icon>
+                {{!-- thêm hình gì đó hợp lý --}}
+                Thi đấu
+              </a>
             </li>
-            <li><a class="dropdown-item" href="#"
-                style="height: 30px;width: 30px; margin-right: 20px;margin-left: 20px">Hỏi đáp</a></li>
+            <li>
+              <hr class="dropdown-divider" >
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Blog</a>
+            </li>
+            
+            {{!-- <li><a class="dropdown-item" href="#" style="height: 30px;width: 30px; margin-right: 20px;margin-left: 20px">Hỏi đáp</a>
+            </li> --}}
           </ul>
         </li>
         <li class="nav-item">
 
         </li>
       </ul>
-
-      {{!-- search --}}
-      {{!-- <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-
-      </form> --}}
-      <div class="SiteAvatar TopNavigationItem">
-        {{!-- ảnh đại diện --}}
-        <div data-overlay-container="true">
-          <div type="button" tabindex="0" id="react-aria1488067590-35" aria-haspopup="true" aria-expanded="false"
-            aria-label="Cài đặt" role="button"><img alt="Ảnh hồ sơ" class="AssemblyAvatar" src=""
-              style="width: 30px;height: 30px;">
+      <div class="header__actions--user">
+        {{#each user}}
+          <div class="header__actions--avatar">
+            <img src="{{this.avatar}}">
           </div>
-        {{/each }}
-          <hr>
-          <ul class="list">
-            <li class="list__item">
-              <a class="list__link" href="/admin">Quản lý hệ thống</a>
-            </li>
-          </ul>
-          <hr>
-          <ul class="list">
-            <li class="list__item">
-              <a class="list__link" href="/new-question">Đặt câu hỏi</a>
-            </li>
-            <li class="list__item">
-              <a class="list__link" href="/my-qa">Câu hỏi của tôi</a>
-            </li>
-          </ul>
-          <hr>
-          <ul class="list">
-            <li class="list__item">
-              <a class="list__link" href="/infor">Thông tin cá nhân</a>
-            </li>
-            <li class="list__item">
-              <a class="list__link" href="/password/change">Đổi mật khẩu</a>
-            </li>
-            <li class="list__item">
-              <a class="list__link" href="/learning/result?subject=toan-hoc-10">Kết quả học tập</a>
-            </li>
-          </ul>
-          <hr>
-          <ul class="list">
-            <li class="list__item">
-              <a class="list__link" href="/logout">Đăng xuất</a>
-            </li>
-          </ul>
-        </div>
-
-        {{!-- không có tài khoản --}}
-        {{!-- button đăng nhập --}}
+          <div class="header__actions--userMenu shadow">
+            <div class="user">
+              <div class="user__avatar">
+                <img src="{{this.avatar}}">
+              </div>
+              <div class="user__info">
+                <div class="name">{{this.fullname}}</div>
+                <div class="username">@{{this.username}}</div>
+              </div>
+            </div>
+            
+            <hr>
+            <ul class="list">
+              <li class="list__item">
+                <a class="list__link" href="/admin">Quản lý hệ thống</a>
+              </li>
+            </ul>
+            <hr>
+            <ul class="list">
+              <li class="list__item">
+                <a class="list__link" href="/new-question">Đặt câu hỏi</a>
+              </li>
+              <li class="list__item">
+                <a class="list__link" href="/my-qa">Câu hỏi của tôi</a>
+              </li>
+            </ul>
+            <hr>
+            <ul class="list">
+              <li class="list__item">
+                <a class="list__link" href="/infor">Thông tin cá nhân</a>
+              </li>
+              <li class="list__item">
+                <a class="list__link" href="/password/change">Đổi mật khẩu</a>
+              </li>
+              <li class="list__item">
+                <a class="list__link" href="/learning/result?subject=toan-hoc-10">Kết quả học tập</a>
+              </li>
+            </ul>
+            <hr>
+            <ul class="list">
+              <li class="list__item">
+                <a class="list__link" href="/logout">Đăng xuất</a>
+              </li>
+            </ul>
+          </div>
+        {{else}}
+            <a href="/login" class="list__link btn btn-primary btn-padding fs-7">Đăng nhập</a>
+        {{/each}}
       </div>
     </div>
   </div>
 </nav>
+<script>
+          document.addEventListener('DOMContentLoaded', function() {
+            var searchAll = $("#search__all");
+            var iconClose = $("ion-icon[name=close]");
+            var searchResult = $(".search__result");
+            var markAllRead = $(".mark-all-read");
 
+            searchAll.keyup(function(e) {
+                iconClose.addClass("d-block");
+                searchResult.addClass("d-block");
+                var searchString = $(this).val();
+                $(".search__string").text(`Kết quả cho '${searchString}'`)
 
-{{!-- <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="/images/logo.png" class="d-block w-100" alt="..." style="width: 100%;height: 100px">
-    </div>
-    <div class="carousel-item">
-      <img src="/images/logo.png" class="d-block w-100" alt="..." style="width: 100%;height:100px">
-    </div>
-    <div class="carousel-item">
-      <img src="/img/thumbnail.jpg" class="d-block w-100" alt="..." style="width: 100%;height:100px">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div> --}}
+                if ($(this).val() == "") {
+                    clearSearch();
+                }
+                else {
+                    $.ajax({
+                        method: 'POST',
+                        url: '/search',
+                        contentType: 'application/json',
+                        data: JSON.stringify({query: searchString}),
+                        success: function (data) {
+                            $(".search__result--content").replaceWith(data);
+                        }
+                    });     
+                }
+            });
 
+            markAllRead.click(function(e) {
+                $.ajax({
+                    method: 'POST',
+                    url: '/notif/mark-all-read',
+                    contentType: 'application/json',
+                    data: JSON.stringify({action: 'mark all as read'}),
+                    success: function (data) {
+                        $(".header__actions--notiMenu .notiMenu-container").replaceWith(data);
+                        $(".header__actions--notiIcon span").html("");
+                    }
+                });  
+            })
 
+            iconClose.click(function (e) {
+                clearSearch();
+            })
 
-{{!--
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <i class="fab fa-github fa-2x mx-3 ps-1"></i>
-    </a>
-    <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fas fa-bars"></i>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pull request</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Issues</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Marketplace</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Explore</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav d-flex flex-row ms-auto me-3">
-        <li class="nav-item me-3 me-lg-0 dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown"
-            aria-expanded="false">
-            <i class="fas fa-plus"></i>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-            <li>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item me-3 me-lg-0 dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-mdb-toggle="dropdown"
-            aria-expanded="false">
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/img (31).jpg" class="rounded-circle" height="22" alt=""
-              loading="lazy" />
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-            <li>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<!-- Navbar -->
+            $(document).click(function (e) {
+                // Nếu click bên ngoài đối tượng container thì ẩn nó đi
+                if (!searchResult.is(e.target) && searchResult.has(e.target).length === 0) {
+                    clearSearch();
+                }
+            });
 
-<style>
-  .form-white.input-group>.form-control:focus {
-    border-color: #fff;
-    box-shadow: inset 0 0 0 1px #fff;
-  }
-
-  .navbar-dark .navbar-nav .nav-link {
-    color: #fff;
-  }
-
-  .navbar-dark .navbar-nav .nav-link:hover,
-  .navbar-dark .navbar-nav .nav-link:focus {
-    color: rgba(255, 255, 255, 0.75);
-  }
-</style> --}}
+            function clearSearch() {
+                iconClose.removeClass("d-block");
+                searchResult.removeClass("d-block");
+                searchAll.val("");
+            }
+        });
+</script>
